# CalmSense

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .zenodo.json  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  MODEL_CARD.md  Makefile  PAPER.md  PORTFOLIO_CHECKLIST.md  PROVENANCE.md  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy.yml
api/: __init__.py  auth.py  dependencies.py  feature_schema.py  main.py  model.py  model_manager.py  schemas.py  settings.py  tasks.py
api/routes/: __init__.py  explanation.py  models.py  prediction.py  websocket.py
configs/: default.yaml
data/raw/: README.md
docs/: ARCHITECTURE.md
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/public/: index.html  manifest.json  model.onnx
frontend/src/: App.tsx  index.css  model_meta.json  results.json  signals.json
frontend/src/components/: About.tsx  CalibrationPanel.tsx  Dashboard.tsx  ErrorBoundary.tsx  ExplainabilityDashboard.tsx  ModelComparison.tsx  PredictionPanel.tsx  SignalExplorer.tsx
frontend/src/services/: api.ts  csv.ts  onnx.ts
frontend/src/types/: index.ts
logs/: README.md
notebooks/: 01_data_exploration.ipynb  02_signal_preprocessing.ipynb  03_feature_engineering.ipynb  04_statistical_analysis.ipynb  05_machine_learning.ipynb  06_deep_learning.ipynb  07_explainability.ipynb  08_dashboard_deployment.ipynb  CalmSense.ipynb
outputs/: README.md
outputs/models/: stress_classifier.joblib  stress_classifier.joblib.sha256
results/: README.md  ablation.csv  binary_model_comparison.csv  binary_per_subject.csv  calibration.json  cross_dataset.json  metrics.json  multiclass_model_comparison.csv  multiclass_per_subject.csv  personalization.json  provenance.json  shap_top_features.csv  stats.json  threshold_metrics.json  wrist.json
scripts/: __init__.py  ablation.py  build_dashboard_data.py  calibration.py  cross_dataset.py  download_data.py  export_onnx.py  export_signals.py  fill_paper_tables.py  personalize.py  run_experiment.py  run_experiments.py  stamp_provenance.py  stats.py  threshold_metrics.py  tuning.py  wrist.py
src/: __init__.py  calibration.py  config.py  dataset.py  dataset_wrist.py  logging_config.py  portable.py  synthetic.py  utils.py
src/analysis/: __init__.py  correlation_analysis.py  descriptive_stats.py  dimensionality_reduction.py  feature_selection.py  hypothesis_testing.py  mixed_effects.py
src/data/: __init__.py  loader.py
src/datasets/: non_eeg.py
src/explainability/: __init__.py  attention_visualizer.py  clinical_interpreter.py  gradcam.py  interpreters.py  lime_explainer.py  shap_explainer.py
src/features/: __init__.py  accelerometer_features.py  eda_features.py  extractor.py  feature_pipeline.py  hrv_base.py  hrv_frequency_domain.py  hrv_nonlinear.py  hrv_time_domain.py  image_encoder.py  respiration_features.py  temperature_features.py
src/models/: __init__.py
src/models/dl/: __init__.py  augmentation.py  base_dl_model.py  cnn_1d.py  cnn_2d.py  cnn_lstm.py  cross_modal_attention.py  data_loader.py  lstm_model.py  networks.py  tabnet_model.py  trainer.py  transformer_model.py
src/models/ml/: __init__.py  base_model.py  classifiers.py  cross_validation.py  ensemble.py  evaluation.py  hyperparameter_tuning.py  imbalance_handler.py  training_pipeline.py
src/preprocessing/: __init__.py  ecg_processor.py  eda_processor.py  filters.py  pipeline.py  respiratory_processor.py  windowing.py
tests/: __init__.py  test_analysis.py  test_api.py  test_calibration.py  test_cnn.py  test_determinism.py  test_dl_models.py  test_docs.py  test_download.py  test_explainability.py  test_features.py  test_methodology.py  test_ml_models.py  test_models.py  test_onnx.py  test_personalize.py  test_pipeline_smoke.py  test_portable.py  test_preprocessing.py  test_utils.py
