[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "calmsense"
version = "0.1.0"
description = "Multimodal stress detection from physiological signals"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "urme-b"}
]
keywords = [
    "stress-detection",
    "wearables",
    "physiological-signals",
    "heart-rate-variability",
    "electrodermal-activity",
    "leave-one-subject-out",
    "model-calibration",
    "reproducible-research",
    "WESAD"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

dependencies = [
    # Scientific core
    "numpy>=1.24,<3.0",
    "pandas>=2.0,<3.0",
    "scipy>=1.10,<2.0",
    "pyarrow>=14.0",
    "scikit-learn==1.6.1",  # pinned: the saved model pickle is version-coupled

    # Biosignal processing
    "neurokit2==0.2.7",
    "wfdb>=4.1,<5.0",  # reads the PhysioNet Non-EEG dataset (WESAD ships as pickle, loaded separately)

    # Models
    "xgboost>=2.0,<3.0",
    "lightgbm>=4.0,<5.0",
    "torch>=2.0,<3.0",

    # Explainability
    "shap>=0.43,<1.0",

    # In-browser model export
    "skl2onnx==1.20.0",
    "onnx==1.19.1",
    "onnxruntime==1.19.2",  # matches the browser's onnxruntime-web 1.19.2

    # Figures
    "matplotlib>=3.7,<4.0",
    "seaborn>=0.12,<1.0",

    # Serving
    "fastapi>=0.103,<1.0",
    "uvicorn[standard]>=0.23,<1.0",
    "pydantic>=2.0,<3.0",

    # Utilities
    "joblib>=1.3,<2.0",
    "structlog>=23.1,<25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.5.0",
]

[project.scripts]
calmsense-api = "api.main:run_server"

[project.urls]
Homepage = "https://github.com/urme-b/CalmSense"
Repository = "https://github.com/urme-b/CalmSense"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "api*"]

[tool.ruff]
line-length = 100
target-version = "py39"
extend-exclude = ["data", "outputs", "results", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "**/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
